# katcalc-qt

./: CMakeLists.txt  README.md  main.cpp
Backend/: calculator.cpp  calculator.h
UI/CalculatorPage/: CalculatorPage.qml
